Add VC resources

--- a/index.html
+++ b/index.html
@@ -1,45 +1,102 @@
 <html>
+
 <head>
-  <meta charset="UTF-8">
-  <meta property="og:title" content="The Angel Network">
-  <meta property="og:description" content="Join a community of aspiring and active Angel investors. Learn from each other, share your story, change the world.">
-  <meta property="og:type" content="website">
-  <meta property="og:image" content="http://justinpotts.co/angel-still.png">
-  <meta property="og:url" content="http://justinpotts.co/angel">
-  <meta name="twitter:title" content="The Angel Network">
-  <meta name="twitter:description" content="Join a community of aspiring and active Angel investors. Learn from each other, share your story, change the world.">
-  <meta name="twitter:image" content=" http://justinpotts.co/angel-still.png">
+  <!-- COMMON TAGS -->
+  <meta charset="utf-8">
+  <title>Vested Capital | Coming Soon</title>
+  <!-- Search Engine -->
+  <meta name="description" content="An early stage fund investing in futuristic, world positive startups. Coming Soon.">
+  <meta name="image" content="http://vested.capital/metacard.png">
+  <!-- Schema.org for Google -->
+  <meta itemprop="name" content="Vested Capital | Coming Soon">
+  <meta itemprop="description" content="An early stage fund investing in futuristic, world positive startups. Coming Soon.">
+  <meta itemprop="image" content="http://vested.capital/metacard.png">
+  <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <link rel="stylesheet" href="angel.css">
-  <link href="https://fonts.googleapis.com/css?family=Lato:300,400,900" rel="stylesheet">
-  <title>Vested Capital</title>
+  <meta name="twitter:title" content="Vested Capital | Coming Soon">
+  <meta name="twitter:description" content="An early stage fund investing in futuristic, world positive startups. Coming Soon.">
+  <meta name="twitter:site" content="@vestedcap">
+  <meta name="twitter:creator" content="@vestedcap">
+  <meta name="twitter:image:src" content="http://vested.capital/metacard.png">
+  <!-- Open Graph general (Facebook, Pinterest & Google+) -->
+  <meta name="og:title" content="Vested Capital | Coming Soon">
+  <meta name="og:description" content="An early stage fund investing in futuristic, world positive startups. Coming Soon.">
+  <meta name="og:image" content="http://vested.capital/metacard.png">
+  <meta name="og:url" content="http://vested.capital/vested">
+  <meta name="og:site_name" content="Vested Capital">
+  <meta name="og:locale" content="en_us">
+  <meta name="og:video" content="http://vested.capital/VC.mp4">
+  <meta name="og:type" content="website">
 </head>
+
+<style>
+  body {
+    background-color: black;
+    overflow: hidden;
+    margin: 0px;
+    font-family: 'Helvetica';
+  }
+
+  video {
+    width: 100%;
+  }
+
+  .footer {
+    z-index:100;
+    position:absolute;
+    bottom:25;
+    left:25;
+    display:inline-block;
+  }
+
+  .footer-item {
+    color: rgb(250, 250, 250, .25);
+  }
+
+  .footer-item:hover {
+    cursor: pointer;
+    color: rgb(250, 250, 250, .5);
+  }
+
+  .sound {
+    z-index: 100;
+    position: absolute;
+    bottom: 25;
+    right: 25;
+    color: rgb(250, 250, 250, .25);
+  }
+
+  .sound:hover {
+    cursor: pointer;
+    color: rgb(250, 250, 250, .5);
+  }
+</style>
+
 <body>
-  <footer class="footer">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-5">
-          <p class="header">Vested Capital</p>
-          <p class="subtext">We're a early-stage fund committed to backing founders that are <em>actually</em> changing the world.</p>
-        </div>
-        <div class="col-md-5"></div>
-        <div class="col-md-2" style="text-align:left">
-          <button class="btn my-2 my-sm-0">Coming Soon</button>
-        </div>
-      </div>
-    </div>
-  </footer>
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+  <video id="video_target" src="VC.mp4" autoplay muted loop></video>
+
+  <div class="footer">
+    <span class="footer-item" onclick="location.href='https://twitter.com/vestedcap'">@vestedcap</span>
+  </div>
+
+  <div class="sound">(unmute)</div>
+
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+
   <script>
-    // var sources = ["https://media.giphy.com/media/3o7buhfGO0G42UCiUo/giphy.gif", "https://media.giphy.com/media/DVVIESNvkCghO/giphy.gif", "https://media.giphy.com/media/26DNdV3b6dqn1jzR6/giphy.gif"]
-    // Chrome rendering issues solved by bg image set through JS
-    $('body').css('background', 'url("angel.gif") no-repeat center center fixed')
-    $('body').css('-webkit-background-size', 'cover')
-    $('body').css('-moz-background-size', 'cover')
-    $('body').css('-o-background-size', 'cover')
+    $("video").prop('muted', true);
+
+    $(".sound").click(function() {
+      if ($("video").prop('muted') == true) {
+        $(".sound").text("(mute)")
+        $("video").prop('muted', false);
+      } else if ($("video").prop('muted') == false) {
+        $(".sound").text("(unmute)")
+        $("video").prop('muted', true);
+      }
+    });
   </script>
 </body>
+
 </html>
